[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
authors = ["Core Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/core-coin/atoms-rs"
repository = "https://github.com/core-coin/atoms-rs"
exclude = ["benches/", "tests/"]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
atoms-consensus = { version = "0.1.0", default-features = false, path = "crates/consensus" }
base-contract = { version = "0.1.0", default-features = false, path = "crates/contract" }
atoms-eips = { version = "0.1.0", default-features = false, path = "crates/eips" }
atoms-genesis = { version = "0.1.0", default-features = false, path = "crates/genesis" }
atoms-json-rpc = { version = "0.1.0", default-features = false, path = "crates/json-rpc" }
atoms-network = { version = "0.1.0", default-features = false, path = "crates/network" }
atoms-node-bindings = { version = "0.1.0", default-features = false, path = "crates/node-bindings" }
atoms-provider = { version = "0.1.0", default-features = false, path = "crates/provider" }
atoms-pubsub = { version = "0.1.0", default-features = false, path = "crates/pubsub" }
atoms-rpc-client = { version = "0.1.0", default-features = false, path = "crates/rpc-client" }
atoms-rpc-types-anvil = { version = "0.1.0", default-features = false, path = "crates/rpc-types-anvil" }
atoms-rpc-types-trace = { version = "0.1.0", default-features = false, path = "crates/rpc-types-trace" }
atoms-rpc-types = { version = "0.1.0", default-features = false, path = "crates/rpc-types" }
atoms-serde = { version = "0.1.0", default-features = false, path = "crates/serde" }
atoms-signer = { version = "0.1.0", default-features = false, path = "crates/signer" }
atoms-signer-wallet = { version = "0.1.0", default-features = false, path = "crates/signer-wallet" }
atoms-transport = { version = "0.1.0", default-features = false, path = "crates/transport" }
atoms-transport-http = { version = "0.1.0", default-features = false, path = "crates/transport-http" }
atoms-transport-ipc = { version = "0.1.0", default-features = false, path = "crates/transport-ipc" }
atoms-transport-ws = { version = "0.1.0", default-features = false, path = "crates/transport-ws" }

test-utils = { version = "0.1.0", default-features = false, path = "crates/internal-test-utils", package = "base-internal-test-utils" }

base-core = {  git = "https://github.com/core-coin/base-rs.git",default-features = false}
base-dyn-abi = {  git = "https://github.com/core-coin/base-rs.git", default-features = false}
base-json-abi = {  git = "https://github.com/core-coin/base-rs.git", default-features = false}
base-primitives = {  git = "https://github.com/core-coin/base-rs.git",default-features = false}
base-ylm-types = {  git = "https://github.com/core-coin/base-rs.git", default-features = false}

alloy-rlp = { version = "0.3", default-features = false }

# ethereum
ethereum_ssz_derive = "0.5"
ethereum_ssz = "0.5"

# crypto
c-kzg = { version = "1.0", default-features = false }
elliptic-curve = { version = "0.13", default-features = false }
sha2 = { version = "0.10", default-features = false }
spki = { version = "0.7", default-features = false }
libgoldilocks = { git = "https://github.com/core-coin/ed448-rs.git"}


# async
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
futures-executor = "0.3"
futures-utils-wasm = "0.1"

hyper = { version = "1.2", default-features = false }
hyper-util = "0.1"
http-body-util = "0.1"
tokio = "1"
tokio-util = "0.7"
tokio-stream = "0.1"
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }

# tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# misc
auto_impl = "1.2"
base64 = "0.22"
bimap = "0.6"
home = "0.5"
itertools = "0.12"
once_cell = { version = "1.19", default-features = false }
pin-project = "1.1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false }
semver = "1.0"
thiserror = "1.0"
thiserror-no-std = "2.0.2"
url = "2.5"
derive_more = "0.99.17"

## serde
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = "3.3.0"

## misc-testing
arbitrary = "1.3"
assert_matches = "1.5"
proptest = "1.4"
proptest-derive = "0.4"
serial_test = "3.0"
similar-asserts = "1.5"
tempfile = "3.10"
