[package]
name = "alloy"
description = "Connect applications to blockchains"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
# core
base-core = { workspace = true, default-features = false }

# alloy
alloy-consensus = { workspace = true, default-features = false, optional = true }
alloy-contract = { workspace = true, default-features = false, optional = true }
alloy-eips = { workspace = true, default-features = false, optional = true }
alloy-genesis = { workspace = true, default-features = false, optional = true }
alloy-network = { workspace = true, default-features = false, optional = true }
alloy-node-bindings = { workspace = true, default-features = false, optional = true }

# providers
alloy-provider = { workspace = true, default-features = false, optional = true }

# pubsub
alloy-pubsub = { workspace = true, default-features = false, optional = true }

# rpc
alloy-json-rpc = { workspace = true, default-features = false, optional = true }
alloy-rpc-client = { workspace = true, default-features = false, optional = true }
alloy-rpc-types-trace = { workspace = true, default-features = false, optional = true }
alloy-rpc-types = { workspace = true, default-features = false, optional = true }

# serde
alloy-serde = { workspace = true, default-features = false, optional = true }

# signer
alloy-signer = { workspace = true, default-features = false, optional = true }
alloy-signer-wallet = { workspace = true, default-features = false, optional = true }

# transport
alloy-transport = { workspace = true, default-features = false, optional = true }
alloy-transport-http = { workspace = true, default-features = false, optional = true }
alloy-transport-ipc = { workspace = true, default-features = false, optional = true }
alloy-transport-ws = { workspace = true, default-features = false, optional = true }

# optional
reqwest = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }

# ----------------------------------------- Configuration ---------------------------------------- #

[features]
default = ["std", "reqwest"]

# std
std = [
    "base-core/std",
    "alloy-eips?/std",
    "alloy-genesis?/std",
    "alloy-serde?/std",
    "alloy-consensus?/std",
]

# configuration
reqwest = [
    "dep:reqwest",
    "alloy-rpc-client?/reqwest",
    "alloy-provider?/reqwest",
    "alloy-transport-http?/reqwest",
    "alloy-transport-http?/reqwest-default-tls",
]
hyper = [
    "dep:hyper",
    "alloy-rpc-client?/hyper",
    "alloy-provider?/hyper",
    "alloy-transport-http?/hyper",
]

# ---------------------------------------- Main re-exports --------------------------------------- #

# general
consensus = ["dep:alloy-consensus"]
contract = ["dep:alloy-contract", "dyn-abi", "json-abi", "json", "ylm-types"]
eips = ["dep:alloy-eips"]
genesis = ["dep:alloy-genesis"]
network = ["dep:alloy-network"]
node-bindings = ["dep:alloy-node-bindings", "alloy-provider?/anvil"]

# providers
providers = ["dep:alloy-provider"]
provider-http = ["providers", "transport-http"]
provider-ws = ["providers", "alloy-provider?/ws", "transport-ws"]
provider-ipc = ["providers", "alloy-provider?/ipc", "transport-ipc"]

# pubsub
pubsub = [
    "dep:alloy-pubsub",
    "alloy-contract?/pubsub",
    "alloy-provider?/pubsub",
    "alloy-rpc-client?/pubsub",
]

# rpc
rpc = []
json-rpc = ["rpc", "dep:alloy-json-rpc"]
rpc-client = ["rpc", "dep:alloy-rpc-client"]
rpc-client-ws = ["rpc", "alloy-rpc-client?/ws"]
rpc-client-ipc = ["rpc", "alloy-rpc-client?/ipc"]
rpc-types = ["rpc"]
rpc-types-eth = ["rpc-types", "dep:alloy-rpc-types"]
rpc-types-json = [
    "alloy-rpc-types?/jsonrpsee-types",
]
rpc-types-trace = ["rpc-types", "dep:alloy-rpc-types-trace"]

# signers
signers = ["dep:alloy-signer"]
signer-wallet = ["signers", "dep:alloy-signer-wallet"]
signer-keystore = ["signer-wallet", "alloy-signer-wallet?/keystore"]
signer-mnemonic = ["signer-wallet", "alloy-signer-wallet?/mnemonic"]
signer-mnemonic-all-languages = [
    "signer-mnemonic",
    "alloy-signer-wallet?/mnemonic-all-languages",
]
signer-yubihsm = ["signer-wallet", "alloy-signer-wallet?/yubihsm"]

# transports
transports = ["dep:alloy-transport"]
transport-http = ["transports", "dep:alloy-transport-http"]
transport-ipc = ["transports", "pubsub", "dep:alloy-transport-ipc"]
transport-ipc-mock = ["alloy-transport-ipc?/mock"]
transport-ws = ["transports", "pubsub", "dep:alloy-transport-ws"]

# ---------------------------------------- Core re-exports --------------------------------------- #

dyn-abi = ["base-core/dyn-abi"]
json-abi = ["base-core/json-abi"]
json = ["base-core/json"]
ylm-types = ["base-core/ylm-types"]

tiny-keccak = ["base-core/tiny-keccak"]
native-keccak = ["base-core/native-keccak"]

postgres = ["base-core/postgres"]
getrandom = ["base-core/getrandom"]
rand = ["base-core/rand"]
rlp = ["base-core/rlp"]
serde = ["base-core/serde", "alloy-eips?/serde", "alloy-serde"]
ssz = ["base-core/ssz", "alloy-rpc-types?/ssz"]
arbitrary = [
    "base-core/arbitrary",
    "alloy-consensus?/arbitrary",
    "alloy-eips?/arbitrary",
    "alloy-rpc-types?/arbitrary",
]
kzg = ["alloy-consensus?/kzg"]
eip712 = [
    "base-core/eip712",
    "alloy-signer?/eip712",
    # TODO: https://github.com/alloy-rs/alloy/issues/201
    # "alloy-signer-trezor?/eip712",
]
