[package]
name = "atoms-consensus"
description = "Core consensus interface"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
base-primitives = { workspace = true, features = ["rlp"] }
alloy-rlp.workspace = true
atoms-eips.workspace = true
atoms-serde = { workspace = true, optional = true }
base-ylm-types.workspace = true

# kzg
c-kzg = { workspace = true, features = ["serde"], optional = true }

# arbitrary
arbitrary = { workspace = true, features = ["derive"], optional = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }

# serde
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
base-primitives = { workspace = true, features = ["arbitrary", "rand"] }
atoms-signer.workspace = true

arbitrary = { workspace = true, features = ["derive"] }
proptest = { workspace = true }
proptest-derive = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
serde_json.workspace = true

[features]
default = ["std"]
std = ["atoms-eips/std", "c-kzg?/std"]
kzg = ["dep:c-kzg", "atoms-eips/kzg", "std"]
arbitrary = [
    "std",
    "dep:arbitrary",
    "dep:proptest-derive",
    "dep:proptest",
    "atoms-eips/arbitrary",
]
serde = [
    "dep:serde",
    "base-primitives/serde",
    "dep:atoms-serde",
    "atoms-eips/serde",
]