[package]
name = "base-contract"
description = "Interact with on-chain contracts"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
atoms-network.workspace = true
atoms-provider.workspace = true
atoms-rpc-types.workspace = true
atoms-transport.workspace = true

base-dyn-abi = { workspace = true, features = ["std"] }
base-json-abi.workspace = true
base-primitives.workspace = true
base-ylm-types.workspace = true

futures-util.workspace = true
futures.workspace = true
thiserror.workspace = true

atoms-pubsub = { workspace = true, optional = true }

[dev-dependencies]
atoms-rpc-client = { workspace = true, features = ["pubsub", "ws"] }
atoms-transport-http.workspace = true
atoms-node-bindings.workspace = true
atoms-provider = { workspace = true, features = ["anvil"] }

reqwest.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber.workspace = true

[features]
pubsub = ["atoms-provider/pubsub", "dep:atoms-pubsub"]
