[package]
name = "atoms-eips"
description = "Core Improvement Proprosal (EIP) implementations"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
base-primitives = { workspace = true, features = ["rlp"], default-features = false }
alloy-rlp = { workspace = true, features = ["derive"], default-features = false }
atoms-serde.workspace = true

sha2 = { workspace = true, default-features = false }

# serde
serde = { workspace = true, default-features = false, optional = true }

# kzg
derive_more = { workspace = true, optional = true }
c-kzg = { workspace = true, optional = true }
once_cell = { workspace = true, features = ["race", "alloc"], optional = true }

# ssz
ethereum_ssz_derive = { workspace = true, optional = true }
ethereum_ssz = { workspace = true, optional = true }

# arbitrary
arbitrary = { workspace = true, features = ["derive"], optional = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }

[dev-dependencies]
base-primitives = { workspace = true, features = ["rand", "serde", "arbitrary"] }
arbitrary = { workspace = true, features = ["derive"] }
proptest = { workspace = true }
proptest-derive = { workspace = true }
serde_json.workspace = true

[features]
default = ["std"]
std = ["base-primitives/std", "alloy-rlp/std", "serde?/std", "c-kzg?/std", "once_cell?/std"]
serde = ["dep:serde", "base-primitives/serde", "c-kzg?/serde"]
kzg = ["dep:derive_more", "dep:c-kzg", "dep:once_cell"]
ssz = ["std", "dep:ethereum_ssz", "dep:ethereum_ssz_derive", "base-primitives/ssz"]
arbitrary = [
    "std",
    "dep:arbitrary",
    "dep:proptest-derive",
    "dep:proptest",
    "base-primitives/arbitrary",
]
