[package]
name = "atoms-genesis"
description = "Core Blockchain genesis file definitions"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
base-primitives.workspace = true
atoms-serde.workspace = true

# serde
serde.workspace = true
serde_json.workspace = true

[features]
default = ["std"]
std = ["base-primitives/std", "atoms-serde/std", "serde/std"]
