[package]
name = "alloy-network"
description = "Ethereum blockchain RPC behavior abstraction"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-consensus = { workspace = true, features = ["std"] }
alloy-eips = { workspace = true, features = ["serde"] }
alloy-json-rpc.workspace = true
base-primitives.workspace = true
alloy-rpc-types.workspace = true
alloy-signer.workspace = true
base-ylm-types.workspace = true

async-trait.workspace = true
futures-utils-wasm.workspace = true
thiserror.workspace = true

[dev-dependencies]
alloy-signer-wallet.workspace = true
tokio.workspace = true
