[package]
name = "atoms-network"
description = "Core blockchain RPC behavior abstraction"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
atoms-consensus = { workspace = true, features = ["std"] }
atoms-eips = { workspace = true, features = ["serde"] }
atoms-json-rpc.workspace = true
base-primitives.workspace = true
atoms-rpc-types.workspace = true
atoms-signer.workspace = true
base-ylm-types.workspace = true

async-trait.workspace = true
futures-utils-wasm.workspace = true
thiserror.workspace = true

[dev-dependencies]
atoms-signer-wallet.workspace = true
tokio.workspace = true
