[package]
name = "atoms-node-bindings"
description = "Core execution-layer client bindings"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
base-primitives = { workspace = true, features = ["std", "serde"] }
atoms-genesis.workspace = true
libgoldilocks.workspace = true
serde_json = { workspace = true, features = ["std"] }
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
rand.workspace = true
