[package]
name = "atoms-provider"
description = "Interface with an Core blockchain"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
atoms-eips.workspace = true
atoms-json-rpc.workspace = true
atoms-network.workspace = true
atoms-node-bindings = { workspace = true, optional = true }
atoms-signer-wallet = { workspace = true, optional = true }
atoms-rpc-client.workspace = true
atoms-rpc-types-trace.workspace = true
atoms-rpc-types.workspace = true
atoms-transport-http = { workspace = true, optional = true }
atoms-transport-ipc = { workspace = true, optional = true }
atoms-transport-ws = { workspace = true, optional = true }
atoms-pubsub = { workspace = true, optional = true }
atoms-transport.workspace = true
base-primitives.workspace = true
atoms-consensus = { workspace = true, features = ["std"] }
atoms-signer.workspace = true

async-stream = "0.3"
async-trait.workspace = true
auto_impl.workspace = true
dashmap = "5.5"
futures.workspace = true
lru = "0.12"
reqwest = { workspace = true, optional = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "macros"] }
tracing.workspace = true
url = { workspace = true, optional = true }
futures-utils-wasm.workspace = true
libgoldilocks.workspace = true

[dev-dependencies]
atoms-consensus = { workspace = true, features = ["std"] }
atoms-node-bindings.workspace = true
atoms-rpc-client = { workspace = true, features = ["reqwest"] }
alloy-rlp.workspace = true
atoms-signer.workspace = true
atoms-signer-wallet.workspace = true
atoms-transport-http = { workspace = true, features = ["reqwest"] }

reqwest.workspace = true
tokio = { workspace = true, features = ["macros"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
tempfile.workspace = true

[features]
default = ["reqwest", "reqwest-default-tls"]
pubsub = ["atoms-rpc-client/pubsub", "dep:atoms-pubsub"]
reqwest = [
    "dep:reqwest",
    "dep:url",
    "dep:atoms-transport-http",
    "atoms-rpc-client/reqwest",
]
hyper = ["dep:atoms-transport-http", "dep:url", "atoms-rpc-client/hyper"]
ws = ["pubsub", "atoms-rpc-client/ws", "atoms-transport-ws"]
ipc = ["pubsub", "atoms-rpc-client/ipc", "atoms-transport-ipc"]
reqwest-default-tls = ["atoms-transport-http?/reqwest-default-tls"]
reqwest-rustls-tls = ["atoms-transport-http?/reqwest-rustls-tls"]
reqwest-native-tls = ["atoms-transport-http?/reqwest-native-tls"]
anvil = ["reqwest", "dep:atoms-node-bindings", "dep:atoms-signer-wallet"]
