[package]
name = "atoms-rpc-client"
description = "Low-level Core JSON-RPC client implementation"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
atoms-json-rpc.workspace = true
atoms-transport-http.workspace = true
atoms-transport.workspace = true

futures.workspace = true
pin-project.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true, features = ["sync"] }
tower.workspace = true
tracing.workspace = true

base-primitives = { workspace = true, optional = true }
atoms-pubsub = { workspace = true, optional = true }
atoms-transport-ws = { workspace = true, optional = true }

reqwest = { workspace = true, optional = true }

hyper-util = { workspace = true, optional = true }

url = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
atoms-transport-ipc = { workspace = true, optional = true }

[dev-dependencies]
base-primitives.workspace = true
atoms-node-bindings.workspace = true
atoms-transport-ipc = { workspace = true, features = ["mock"] }
atoms-transport-ws.workspace = true

tempfile = "3"
futures-util.workspace = true

[features]
default = ["reqwest"]
reqwest = ["dep:url", "dep:reqwest", "atoms-transport-http/reqwest"]
hyper = ["dep:url", "dep:hyper-util", "atoms-transport-http/hyper"]
pubsub = ["dep:atoms-pubsub", "dep:base-primitives"]
ws = ["pubsub", "dep:atoms-transport-ws", "dep:url"]
ipc = ["pubsub", "dep:atoms-transport-ipc"]
