[package]
name = "atoms-rpc-types-trace"
description = "Core RPC trace types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
base-primitives = { workspace = true, features = ["rlp", "serde"] }
atoms-rpc-types.workspace = true
atoms-serde.workspace = true

serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
base-primitives = { workspace = true, features = ["rand", "rlp", "serde", "arbitrary"] }

arbitrary = { workspace = true, features = ["derive"] }
proptest.workspace = true
proptest-derive.workspace = true
rand.workspace = true
similar-asserts.workspace = true
