[package]
name = "atoms-rpc-types"
description = "Alloy RPC types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
# ethereum
alloy-rlp = { workspace = true, features = ["arrayvec", "derive"] }
base-primitives = { workspace = true, features = ["rlp", "serde", "std"] }
atoms-serde.workspace = true
atoms-genesis.workspace = true
libgoldilocks.workspace = true


atoms-consensus = { workspace = true, features = ["std", "serde"] }
atoms-eips = { workspace = true, features = ["std", "serde"] }

itertools.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true


# arbitrary
arbitrary = { version = "1.3", features = ["derive"], optional = true }
proptest = { version = "1.4", optional = true }
proptest-derive = { version = "0.4", optional = true }

# jsonrpsee
jsonrpsee-types = { version = "0.22", optional = true }
base-ylm-types.workspace = true

[features]
arbitrary = [
    "dep:arbitrary",
    "dep:proptest-derive",
    "dep:proptest",
    "base-primitives/arbitrary",
    "atoms-eips/arbitrary",
]
jsonrpsee-types = ["dep:jsonrpsee-types"]
ssz = ["base-primitives/ssz", "atoms-eips/ssz"]

[dev-dependencies]
base-primitives = { workspace = true, features = [
    "rand",
    "rlp",
    "serde",
    "arbitrary",
] }
atoms-consensus = { workspace = true, features = ["std", "arbitrary"] }

arbitrary = { workspace = true, features = ["derive"] }
proptest.workspace = true
proptest-derive.workspace = true
rand.workspace = true
similar-asserts.workspace = true
