[package]
name = "atoms-signer-wallet"
description = "sepc256k1 ECDSA and YubiHSM signer implementations"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
atoms-consensus = { workspace = true, features = ["std"] }
atoms-network.workspace = true
base-primitives.workspace = true
atoms-signer.workspace = true

libgoldilocks.workspace = true
rand.workspace = true
thiserror.workspace = true
async-trait.workspace = true

# keystore
elliptic-curve = { workspace = true, optional = true }
xcb-keystore = { git = "https://github.com/core-coin/xcb-keystore-rs.git", default-features = false, optional = true }

# mnemonic
coins-bip32 = { version = "0.8.7", default-features = false, optional = true }
coins-bip39 = { version = "0.8.7", default-features = false, features = [
    "english",
], optional = true }

# yubi
yubihsm = { version = "0.42", features = ["secp256k1", "http", "usb"], optional = true }

[dev-dependencies]
serde.workspace = true
atoms-consensus = { workspace = true, features = ["std"] }
atoms-network.workspace = true
assert_matches.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# need to enable features for tests
yubihsm = { version = "0.42", features = ["mockhsm"] }

[features]
keystore = ["dep:xcb-keystore", "dep:elliptic-curve"]
mnemonic = ["dep:coins-bip32", "dep:coins-bip39"]
mnemonic-all-languages = ["mnemonic", "coins-bip39?/all-langs"]
yubihsm = ["dep:yubihsm", "dep:elliptic-curve"]
