[package]
name = "atoms-signer"
description = "Core signer abstraction"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
base-primitives = { workspace = true, features = ["std"] }

async-trait.workspace = true
auto_impl.workspace = true
elliptic-curve.workspace = true
libgoldilocks.workspace = true
thiserror.workspace = true

# eip712
base-ylm-types = { workspace = true, optional = true, features = ["std"] }
base-dyn-abi = { workspace = true, optional = true, features = ["std", "eip712"] }

[dev-dependencies]
atoms-consensus = { workspace = true, features = ["std"] }
atoms-network.workspace = true
atoms-signer-wallet.workspace = true
assert_matches.workspace = true
serde_json.workspace = true
serde.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
eip712 = ["dep:base-ylm-types", "dep:base-dyn-abi"]
