[package]
name = "atoms-transport-http"
description = "HTTP transport implementation"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
atoms-json-rpc = { workspace = true, optional = true }
atoms-transport.workspace = true

url.workspace = true
serde_json = { workspace = true, optional = true }
tower = { workspace = true, optional = true }

reqwest = { workspace = true, features = ["json"], optional = true }
tracing = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
http-body-util = { workspace = true, optional = true }
hyper = { workspace = true, default-features = false, optional = true }
hyper-util = { workspace = true, features = ["full"], optional = true }

[features]
default = ["reqwest", "reqwest-default-tls"]
reqwest = ["dep:reqwest", "dep:atoms-json-rpc", "dep:serde_json", "dep:tower", "dep:tracing"]
hyper = [
    "dep:hyper",
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:atoms-json-rpc",
    "dep:serde_json",
    "dep:tower",
    "dep:tracing"
]
reqwest-default-tls = ["reqwest?/default-tls"]
reqwest-native-tls = ["reqwest?/native-tls"]
reqwest-rustls-tls = ["reqwest?/rustls-tls"]
